--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (8.1.7) UNRELEASED; urgency=low
+
+  * Fix example. Closes: #627534
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
+
 debhelper (8.1.6) unstable; urgency=low
 
   * dh_ucf: Fix missing space before ']'s in postrm autoscript.
