--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (8.1.7) UNRELEASED; urgency=low
 
   * Fix example. Closes: #627534
+  * Fix error message. Closes: #628053
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2011 15:24:19 -0400
 
