dh_auto_configure: In v9, does not include the source package name in --libexecdir when using autoconf. Closes: #541458
Fixed rleigh's patch to be more correct in the edge case where there is
a non-multiarch dpkg (ie, backports).

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -550,6 +550,11 @@ while B<dh_makeshlibs> detects packages containing multiarch
 directories and sets a Pre-Dependency on multiarch-support in
 ${misc:Pre-Depends}
 
+=item -
+
+B<dh_auto_configure> does not include the source package name
+in --libexecdir when using autoconf.
+
 =back
 
 =back
