--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_installdocs: Support having the same document id in different binary
     packages built from the same source.
     Closes: #525821 Thanks, Don Armstrong
+  * dh_installinit: Support systemd.
+    Closes: #690399 Thanks, Michael Stapelberg
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
