--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * Updated German man page translation. Closes: #691557
   * dh_installinit: Support systemd.
     Closes: #690399 Thanks, Michael Stapelberg
+  * Updated French man page translation.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
