--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_installinit: Support systemd.
     Closes: #690399 Thanks, Michael Stapelberg
   * Updated French man page translation. Closes: #692208
+  * dh_icons: Reword description. Closes: #693100
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
