--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     Closes: #690399 Thanks, Michael Stapelberg
   * Updated French man page translation. Closes: #692208
   * dh_icons: Reword description. Closes: #693100
+  * Avoid find -perm +mode breakage caused by findutils 4.5.11,
+    by instead using -perm /mode. Closes: #700200
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
