--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_icons: Reword description. Closes: #693100
   * Avoid find -perm +mode breakage caused by findutils 4.5.11,
     by instead using -perm /mode. Closes: #700200
+  * cmake: Configure with -DCMAKE_BUILD_TYPE=RelWithDebInfo
+    Closes: #701233
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
