--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * cmake: Configure with -DCMAKE_BUILD_TYPE=RelWithDebInfo
     Closes: #701233
   * dh_auto_test: Avoid doing anything when cross-compiling. Closes: #703262
+  * dh_testdir: Fix error message. Closes: #703515
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
