--- a/debian/changelog
+++ b/debian/changelog
@@ -20,7 +20,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     packages built from the same source.
     Closes: #525821 Thanks, Don Armstrong
   * dh_installdeb: Avoid unnecessary is_udeb tests. Closes: #691398
-  * Updated German man page translation. Closes: #691557
+  * Updated German man page translation. Closes: #691557, #706314
   * dh_installinit: Support systemd.
     Closes: #690399 Thanks, Michael Stapelberg
   * Updated French man page translation. Closes: #692208
