--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130505) UNRELEASED; urgency=low
+
+  * perl_makemaker: Unset INSTALL_BASE in case the user has it set.
+    Closes: #705141
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400
+
 debhelper (9.20130504) unstable; urgency=low
 
   * dh_shlibdeps: Warn if -V flag is passed, to avoid it accidentially being
