--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ debhelper (9.20130508) UNRELEASED; urgency=low
     autoscript. Closes: #707159
   * dh_installinfo: Stop inserting dependencies for partial upgrades
     from lenny to squeeze. Closes: #707218
+  * dh_compress, dh_perl: Avoid failing if the package build directory does
+    not exist.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 07 May 2013 19:42:52 -0400
 
