--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20130604) UNRELEASED; urgency=low
+debhelper (9.20130604) unstable; urgency=low
 
   * dh_installchangelogs: No longer automatically converts html changelogs.
     A plain text version can be provided as a second parameter, or it will
@@ -12,7 +12,7 @@ debhelper (9.20130604) UNRELEASED; urgency=low
     when adding misc:Depends for an invoke-rc.d that supports upstart
     jobs. Closes: #709482
 
- -- Joey Hess <joeyh@debian.org>  Tue, 04 Jun 2013 11:22:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 04 Jun 2013 11:27:29 -0400
 
 debhelper (9.20130518) unstable; urgency=low
 
