--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130605) UNRELEASED; urgency=low
+
+  * dh_installchangelogs: Fix bug preventing automatic installation of
+    upstream changelog. Closes: #711131
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Jun 2013 12:28:19 -0400
+
 debhelper (9.20130604) unstable; urgency=low
 
   * dh_installchangelogs: No longer automatically converts html changelogs.
