--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,10 @@ debhelper (10.7) UNRELEASED; urgency=medium
   * dh_gencontrol: Rewrite code that ensures that misc:Depends and
     misc:Pre-Depends are present to avoid relying external processes
     for this.
+  * dh_builddeb: Let dpkg-deb choose the default compression level for
+    dbgsym packages instead of using xz -1e.  The current default (xz -6)
+    is likely to be a better default value for dbgsym packages.  Thanks to
+    Adrian Bunk for the suggestion.  (Closes: #868674)
 
   [ Colin Watson ]
   * Quote assignment to $recommended_compat in case it isn't a valid Perl
