--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
     Adrian Bunk for the suggestion.  (Closes: #868674)
   * cmake.pm: Pass -DCMAKE_INSTALL_RUNSTATEDIR=/run to cmake in compat 11.
     Thanks to Felix Geyer for the suggestion.  (Closes: #869697)
+  * cmake.pm: Avoid using the user specific cmake package registry.  Thanks
+    to Christian Seiler and Felix Geyer.  (Closes: #868584)
 
   [ Colin Watson ]
   * Quote assignment to $recommended_compat in case it isn't a valid Perl
