--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10.7) UNRELEASED; urgency=medium
+debhelper (10.7) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_usrlocal: Fix call to doit to avoid making it fork a shell.
@@ -75,7 +75,7 @@ debhelper (10.7) UNRELEASED; urgency=medium
     (e.g. pass --mandir=/usr/share/man instead of --mandir=${prefix}/share/man).
     (Closes: #813266)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 29 Jul 2017 18:00:24 +0000
 
 debhelper (10.6.4) unstable; urgency=medium
 
