--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ debhelper (10.10.7) UNRELEASED; urgency=medium
   * dh_strip: Fix a regression that caused debug symbols for
     executables to be discarded instead of included into
     debug packages.
+  * Dh_Lib: Ensure that $dh{U_PARAMS} is always defined as a
+    list.  Thanks to Adrian Bunk for the bug report.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 11 Nov 2017 13:47:37 +0000
 
