--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (10.10.8) UNRELEASED; urgency=medium
 
   * Document that compat 11 is now in its open beta phase.
+  * Dh_Getopt: Improve warning message when a package is excluded
+    due to profiles or architecture restrictions.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 12 Nov 2017 09:55:24 +0000
 
