--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
 debhelper (10.10.8) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Document that compat 11 is now in its open beta phase.
   * Dh_Getopt: Improve warning message when a package is excluded
     due to profiles or architecture restrictions.
   * dh_install: Properly allow patterns to be excluded without
     complaining about missing files.  (Closes: #881658)
+
+  [ Dmitry Shachnev ]
+  * qmake.pm: Set QMAKE_LINK correctly for cross-builds.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 12 Nov 2017 09:55:24 +0000
 
