--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (10.10.9) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * qmake.pm: Add missing import of generated_file.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
+
 debhelper (10.10.8) unstable; urgency=medium
 
   [ Niels Thykier ]
