--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,12 @@ debhelper (10.10.9) UNRELEASED; urgency=medium
     Now output of ‘qmake -query’ with and without using this file is
     identical. This makes cross-building Qt’s own modules possible.
 
+  [ Niels Thykier ]
+  * dh_missing: Permit a missing debian/tmp without failing in
+    compat 11 when debian/tmp is an implicit source directory.
+    Thanks to Christoph Biedl for reporting the bug.
+    (Closes: #882083)
+
  -- Niels Thykier <niels@thykier.net>  Thu, 16 Nov 2017 18:36:51 +0000
 
 debhelper (10.10.8) unstable; urgency=medium
