--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2017-12-02 09:47+0100\n"
 "PO-Revision-Date: 2017-01-12 22:28+0000\n"
 "Last-Translator: Américo Monteiro <a_monteiro@gmx.com>\n"
-"Language-Team: Portuguese <>\n"
+"Language-Team: Portuguese <traduz@debianpt.org>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
