--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (10.10.10) UNRELEASED; urgency=medium
     parameters in "maintscript" parameters in compat 10 and newer.
     In compat 12, this is an error.  Thanks to Andreas Beckmann for
     the suggestions.  (Closes: #882626)
+  * dh_strip: Fix bug where the Build-Id field would not be properly
+    filled when using --dbg-package.  Thanks to Paul Wise for finding
+    and reporting the bug.  (Closes: #884152)
 
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)
