dh: Do not re-run completed targets
This is part of 2 of the dh sequence rewrite.  Part 1
is cb2caa7f67837294b0681d881f52dd23df487f33.

This change ensures that dh no longer attempts to run a target that is
already marked as complete (e.g. via the stamp file).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_gencontrol: Deduplicate debug-ids before inserting them into
     the control file.  Thanks to Mattia Rizzolo for reporting the
     bug.  (Closes: #886038)
+  * dh: Rewrite sequence handling to ensure that dh does not "inline"
+    a subtarget of a target it recurses into.  Thanks to James
+    Cowgill for reporting the bug.  (Closes: #880840)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
