--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (11.1.1) UNRELEASED; urgency=medium
+
+  * dh: Fix an off-by-one in a compat check.  This fixes an
+    internal error for compat 9 packages that requires dh to
+    recurse into the debian/rules file.  Thanks to Helmut
+    Grohne for reporting the bug.  (Closes: #886518)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 09:17:16 +0000
+
 debhelper (11.1) unstable; urgency=medium
 
   [ Paul Tagliamonte ]
