--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (11.1.2) UNRELEASED; urgency=medium
+
+  * dh: Fix non-sense error about a missing "startpoint object
+    method".
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 21:30:13 +0000
+
 debhelper (11.1.1) unstable; urgency=medium
 
   * dh: Fix an off-by-one in a compat check.  This fixes an
