--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (11.1.2) UNRELEASED; urgency=medium
+debhelper (11.1.2) unstable; urgency=medium
 
   * dh: Fix non-sense error about a missing "startpoint object
     method".
 
- -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 21:30:13 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 07 Jan 2018 21:31:40 +0000
 
 debhelper (11.1.1) unstable; urgency=medium
 
