--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (11.1.3) UNRELEASED; urgency=medium
   * autoscripts/*: Improve rollback handling of many scripts.
     Notably a lot of scripts failed to rerun the postinst parts
     on an "abort-upgrade".  (Closes: #446856)
+  * debian/control: Add a Breaks on meson to ensure that we have
+    meson (>= 0.40.0) as the meson build system uses --wrap-mode.
+    This is mostly relevant for backports.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000
 
