--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1.3) UNRELEASED; urgency=medium
+debhelper (11.1.3) unstable; urgency=medium
 
   * autoscripts/*: Improve rollback handling of many scripts.
     Notably a lot of scripts failed to rerun the postinst parts
@@ -16,7 +16,7 @@ debhelper (11.1.3) UNRELEASED; urgency=medium
     "safe no-op" parameters to commands.  Thanks to Axel Beckert
     and Sascha Steinbiss for the report.  (Closes: #887727)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 14 Jan 2018 09:54:57 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 20 Jan 2018 18:26:06 +0000
 
 debhelper (11.1.2) unstable; urgency=medium
 
