--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (11.1.4) UNRELEASED; urgency=medium
+
+  * qmake.pm/qmake4.pm: Avoid global state in the build systems.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
+
 debhelper (11.1.3) unstable; urgency=medium
 
   * autoscripts/*: Improve rollback handling of many scripts.
