--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (11.1.4) UNRELEASED; urgency=medium
 
   * qmake.pm/qmake4.pm: Avoid global state in the build systems.
+  * dh_makeshlibs: Fix --no-act, which could still cause writes
+    to the shlibs file.  Thanks to Sven Joachim for reporting it.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
