--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
     when the pattern was handled as a glob.  The bug was
     introduced in debhelper/10.6.  Thanks to Wouter Verhelst for
     finding the bug.  (Closes: #888251)
+  * d/control: Update the Vcs-* fields to point to
+    salsa.debian.org as a part of the migration from alioth.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
