--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,9 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
     to debhelper-devel@lists.alioth.debian.org should be
     replaced by a subscription in tracker.debian.org or
     salsa.debian.org.
+  * d/control: Remove Bernhard R. Link from uploaders as he does
+    not appear to be active in debhelper at the moment.  Thanks
+    to Bernhard for his past contributions.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
