--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
   * d/control: Remove Bernhard R. Link from uploaders as he does
     not appear to be active in debhelper at the moment.  Thanks
     to Bernhard for his past contributions.
+  * d/control: Bump (Build-)Dependency on dpkg to ensure that
+    dpkg provides DEB_RULES_REQUIRES_ROOT and DEB_GAIN_ROOT_CMD
+    as a part of its Rules-Requires-Root support.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
