--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Rely on DEB_RULRES_REQUIRES_ROOT instead of the
     field to determine whether or not tools may "root-only"
     actions (such as chown'ing).
+  * d/control: Bump dependency on dh-autoreconf to ensure that
+    packages do not experience #887482.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
 
