--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.1.4) UNRELEASED; urgency=medium
+debhelper (11.1.4) unstable; urgency=medium
 
   * qmake.pm/qmake4.pm: Avoid global state in the build systems.
   * dh_makeshlibs: Fix --no-act, which could still cause writes
@@ -32,7 +32,7 @@ debhelper (11.1.4) UNRELEASED; urgency=medium
   * makefile.pm: Ensure that command line arguments are passed
     deterministically to make when cross-compiling.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 21 Jan 2018 08:18:20 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 31 Jan 2018 21:36:13 +0000
 
 debhelper (11.1.3) unstable; urgency=medium
 
