--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (11.1.5) UNRELEASED; urgency=medium
+
+  * dh_installdocs: Add missing documentation about --sourcedir
+    in compat 11.
+  * dh_installdocs: Document that d/tmp is used by default
+    in compat 11.
+  * dh_installexamples: Ditto.
+  * dh_installinfo: Ditto.
+  * dh_installman: Ditto.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
+
 debhelper (11.1.4) unstable; urgency=medium
 
   * qmake.pm/qmake4.pm: Avoid global state in the build systems.
