--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
   * dh_installexamples: Ditto.
   * dh_installinfo: Ditto.
   * dh_installman: Ditto.
+  * meson.pm: Apply patch from Jakub Wilk to fix typo in the name
+    of the "C.UTF-8" locale.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
