--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
   * dh_installman: Ditto.
   * meson.pm: Apply patch from Jakub Wilk to fix typo in the name
     of the "C.UTF-8" locale.
+  * autoscripts/postinst-systemd-restart: Apply patch from
+    Christoph Biedl to fix indentation.  (Closes: #890373)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
