--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,7 @@ debhelper (11.1.4) unstable; urgency=medium
   * d/control: Bump (Build-)Dependency on dpkg to ensure that
     dpkg provides DEB_RULES_REQUIRES_ROOT and DEB_GAIN_ROOT_CMD
     as a part of its Rules-Requires-Root support.
-  * Dh_Lib.pm: Rely on DEB_RULRES_REQUIRES_ROOT instead of the
+  * Dh_Lib.pm: Rely on DEB_RULES_REQUIRES_ROOT instead of the
     field to determine whether or not tools may "root-only"
     actions (such as chown'ing).
   * d/control: Bump dependency on dh-autoreconf to ensure that
