--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,11 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
   * makefile.pm: Synchronize output from make (via -O) when
     make runs in parallel.  Thanks to Goswin von Brederlow for
     the suggestion.  (Closes: #768791)
+  * dh_gencontrol: Avoid uninitialized value warning when there
+    are no build-ids (e.g. because the builder disabled the
+    dbgsym building via DEB_BUILD_OPTIONS).  This regression
+    was introduced in 11.1.  Thanks to Christian Marillat for
+    reporting the bug.  (Closes: #890736)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
